<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioGroupChooseSync"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/radioButtonBroadcastReceiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_broadcast_receiver" />

    <RadioButton
        android:id="@+id/radioButtonContentObserver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_content_observer" />

    <RadioButton
        android:id="@+id/radioButtonHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_handler" />

</RadioGroup>