<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.steganomobile.common.sender.view.SenderActivity">

    <item
        android:id="@+id/action_split"
        android:icon="@drawable/ic_action_split"
        android:orderInCategory="99"
        android:title="@string/action_split"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="101"
        android:title="@string/action_cancel"
        app:showAsAction="always" />

</menu>
